<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_member"
        android:title="@string/popup_member"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_leave"
        android:title="@string/popup_leave"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/emailVerificationDelete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_icon"
        android:title="@string/icon"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>