<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextStatic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <ImageView
        android:id="@+id/ivAccountImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/account_image_description"
        android:paddingTop="8dp"
        android:src="@drawable/ic_account_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvAccountName"
        style="@style/TextStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAccountImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_userName"
        style="@style/TextDynamic"
        android:layout_width="350dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAccountEmail"
        style="@style/TextStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv_userEmail"
        style="@style/TextDynamic"
        android:layout_width="350dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_userName"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="@+id/tv_userName"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAccountID"
        style="@style/TextStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_userID"
        style="@style/TextDynamic"
        android:layout_width="350dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_userEmail"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="@+id/tv_userEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountID"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buAccountLogout"
        style="@style/AccountButton"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/account_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userID"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buResetPassword"
        style="@style/AccountButton"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/account_reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buAccountLogout"
        app:layout_constraintStart_toStartOf="@+id/buAccountLogout"
        app:layout_constraintTop_toBottomOf="@+id/buAccountLogout"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buDeleteAccount"
        style="@style/AccountButton"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/account_delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buResetPassword"
        app:layout_constraintStart_toStartOf="@+id/buResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/buResetPassword"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buVerify"
        style="@style/AccountButton"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="Verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buDeleteAccount"
        app:layout_constraintStart_toStartOf="@+id/buDeleteAccount"
        app:layout_constraintTop_toBottomOf="@+id/buDeleteAccount"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>